# mechlib

./: .ExifTool_config  .gitignore  CLAUDE.md  README.md  backup.sh  config.py  create_ec2_keypair.sh  deploy.sh  gallery.html  main.py  mcp_server.py  pyproject.toml
backend/: .ExifTool_config  .dockerignore  .env.template  Dockerfile  config.py  main.py  mcp_server.py  pyproject.toml
backend/src/api/: auth.py  main.py  schemas.py
backend/src/api/routers/: __init__.py  auth.py  image.py
backend/src/mechlib/: gallery_generator.py  img_fetcher.py  img_processor.py  metadata_fetcher.py  pinecone_vector_store.py  questionary.py  s3_store.py  vector_store.py
backend/templates/: gallery.html
docker/: compose.yaml  docker-compose.yml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Gallery.tsx  ImageUploader.tsx  InputFile.tsx  Login.tsx  MaterialsCheckBox.tsx  ProcessCheckBox.tsx  Processor.tsx  SearchComponent.tsx  SpinnerItem.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/components/ui/shadcn-io/dropzone/: index.tsx
frontend/src/contexts/: AuthContext.tsx
src/: gallery_generator.py  img_fetcher.py  img_processor.py  s3_store.py  vector_store.py
terraform/: .terraform.lock.hcl  cloudwatch.tf  ec2.tf  iam.tf  iam_ec2_role.tf  kms.tf  main.tf  outputs.tf  s3-backup.tf  s3-data.tf  s3.tf  secrets.tf  security_groups.tf  user_data.sh  variables.tf
